# Proyecto_Robots_Moviles

./: README.md
Moviles/catkin_ws/: frames.gv
Moviles/catkin_ws/devel/: .catkin  .rosinstall
Moviles/catkin_ws/devel/lib/my_robot_finder/: color_detection.py  klau.py  navigation.py  otto.py  return_to_start.py  user_input.py
Moviles/catkin_ws/devel/lib/pkgconfig/: my_robot_finder.pc  spawn_robot_tools_pkg.pc  turtle_tf_3d.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
Moviles/catkin_ws/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
Moviles/catkin_ws/devel/lib/turtlebot3_example/: turtlebot3_bumper  turtlebot3_client  turtlebot3_illumination  turtlebot3_marker_server  (+1 more)
Moviles/catkin_ws/src/my_robot_finder/: CMakeLists.txt  README.md  package.xml
Moviles/catkin_ws/src/my_robot_finder/config/: amcl_node.xml
Moviles/catkin_ws/src/my_robot_finder/launch/: amcl.launch  mapa.launch  rviz.launch  todo.launch  turtlebot3_navigation.launch  turtlebot3_remote.launch
Moviles/catkin_ws/src/my_robot_finder/launch/includes/: description.launch.xml
Moviles/catkin_ws/src/my_robot_finder/maps/: mapa.pgm  mapa.yaml
Moviles/catkin_ws/src/my_robot_finder/rviz/: turtlebot3_navigation.rviz
Moviles/catkin_ws/src/my_robot_finder/src/: iker.py  klau.py  main.py  nico.py  otto.py
Moviles/catkin_ws/src/my_robot_finder/urdf/: turtlebot3_burger.urdf.xacro
Moviles/catkin_ws/src/my_robot_finder/worlds/: colores.world
(+30 files in other folders)
